Finish basic structure of page and button/inputs

--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Doodle+Shadow&family=Rubik+Glitch+Pop&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Let's Paint</title>
 </head>
 <body>
-    
+    <div class="view">
+        <div class="title">
+            <H1>Let's Paint</H1>
+        </div>
+        <div class="main">
+            <div class="control">
+                <input type="color" id="color-picker">
+                <button>Toggle Eraser</button>
+                <button>Toggle Rainbow</button>
+                <button>Toggle Shading</button>
+                <button>Toggle Lighten</button>
+                <button>Colour Grabber</button>
+                <button>Toggle Grid Lines</button>
+                <button>Clear</button>
+            </div>
+            <div class="canvas-wrapper">
+                <div class="canvas">
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
