--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="script.js" defer></script>
     <title>Let's Paint</title>
 </head>
-<body>
+<body ondragstart="return false;">
     <div class="view">
         <div class="title">
             <H1>Let's Paint</H1>
@@ -19,13 +19,13 @@
         <div class="main">
             <div class="control">
                 <input type="color" id="colorPicker">
-                <button id="toggleEraser">Toggle Eraser</button>
-                <button id="toggleRainbow">Toggle Rainbow</button>
-                <button id="toggleShading">Toggle Shading</button>
-                <button id="toggleLighten">Toggle Lighten</button>
-                <button id="toggleGrapper">Colour Grabber</button>
-                <button id="toggleLines">Toggle Grid Lines</button>
-                <button id="clear">Clear</button>
+                <button id="toggleEraser" class="">Toggle Eraser</button>
+                <button id="toggleRainbow" class="">Toggle Rainbow</button>
+                <button id="toggleShading" class="">Toggle Shading</button>
+                <button id="toggleLighten" class="">Toggle Lighten</button>
+                <button id="toggleGrapper" class="">Colour Grabber</button>
+                <button id="toggleLines" class="">Toggle Grid Lines</button>
+                <button id="clear" class="">Clear</button>
             </div>
             <div class="canvas-wrapper">
                 <div id="canvas">
