Fix spelling of Grabber :)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button id="toggleRainbow" class="">Toggle Rainbow</button>
                 <button id="toggleShading" class="">Toggle Shading</button>
                 <button id="toggleLighten" class="">Toggle Lighten</button>
-                <button id="toggleGrapper" class="">Colour Grabber</button>
+                <button id="toggleGrabber" class="">Colour Grabber</button>
                 <button id="toggleLines" class="">Toggle Grid Lines</button>
                 <button id="clear" class="">Clear</button>
             </div>
