Add slider to change canvas size

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <button id="toggleGrabber" class="">Colour Grabber</button>
                 <button id="toggleLines" class="">Toggle Grid Lines</button>
                 <button id="clear" class="">Clear</button>
+                <div id="slider">
+                    <p id="size">10 x 10</p>
+                    <input type="range" min="10" max="50" step="2" value="10" id="canvas-size">
+                </div>
             </div>
             <div class="canvas-wrapper">
                 <div id="canvas">
